104
-- changed configure --with-libpcre-* to --with-pcre-* for consistency
-- same for pcap (again!)
-- added stream_size and stream_reassemble ips options

103
-- added modules to ips options
-- removed ips option sameip which was obsoleted by 116:152
-- content args offset, depth, distance, and within must be followed by a
   space not a colon
-- latest snort2lua updates from josh

102
-- moved stats (peg counts) to module
-- removed sum() and stats() from InspectApi
-- tweaked --help-module

101
-- tweaked startup output
-- fixed pattern matcher
-- pulled in latest from Tom

100
-- adding profiling to module
-- profile.preprocs is now profile.modules

99
-- updated wizard
-- removed service / app id from inspectors

98
-- initial wizard implementation

97
-- latest from Tom
-- some valgrind fixes

96
-- finished default fp selection
-- added NHttpInspect::get_buf() and related

95
-- added some wizard module foo
-- fixed cmake build with static inspectors for wizard and binder

94
-- pulled in latest from Tom

93
-- updated example inspector dpx.cc api
-- misc tweaks
-- changed binder to inspector with designated type
-- added prototype wizard inspector for service selection magic
-- fixed plugin instantiation when top level table is a list
-- changed http_inspect to optionally build dynamically

92
-- fixed fast_pattern only auto configuration
-- more detection buffer cleanup

91
-- eliminated more RULE_OPTION_TYPE_*
-- converted remaining rule options over to use cursor
-- added IpsOption CursorActionType
-- finally eliminated doe_ptr and friends ... yay!
-- merged ips_option_base64_{data,decode}.cc
-- fast_pattern_only (previously fast_pattern:only) is gone

90
-- added InspectApi.buffers and Inspector::getbuf()
-- changed http_* rule options to use Inspector::getbuf()
-- changed luajit rule option to use the cursor

89
-- pulled in the latest from tom and josh

88
-- overhauled content and pcre detection to use Cursor