@@ -29,6 +29,7 @@
 #include "framework/module.h"
 #include "framework/parameter.h"
 #include "detection/detect.h"
+#include "detection/detection_defines.h"
 #include "hash/sfhashfcn.h"
 #include "time/profiler.h"
 
